--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="n">
+        <activity android:name=".ui.CreateChatActivity"></activity>
         <activity
             android:name=".ui.RegisterActivity"
             android:label="@string/app_name"
