--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="n">
-        <activity android:name=".ui.CreateChatActivity"></activity>
+        <activity android:name=".ui.CreateChatActivity" />
         <activity
             android:name=".ui.RegisterActivity"
             android:label="@string/app_name"
@@ -48,6 +48,11 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity" />
+        </activity>
+        <activity
+            android:name=".ui.FindUsersActivity"
+            android:label="@string/title_activity_invite"
+            android:windowSoftInputMode="adjustPan">
         </activity>
         <activity android:name=".ui.MainActivity">
             <intent-filter>
